# pixelforge

./: README.md
api/: .env.example  Dockerfile  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 04a2f6d77094_user_jobs_indexes.py  2129702a5ee8_fix_jobs_fk.py  38a1d65429b7_user_create_migration.py  77d6ef31e9da_added_bytes_size_column_to_jobs.py  b58d6e051f1d_initial_migration.py  f6bfb48b04b3_user_job_relationship.py
api/core/: db.py  dependencies.py  security.py  settings.py  storage.py
api/models/: __init__.py  base.py  job.py  user.py
api/routes/: auth.py  format.py  job.py  user.py
api/routes/ws/: job.py  utils.py
api/schemas/: job.py  pagination.py  user.py
api/scripts/: entrypoint.sh
api/utils/: pagination.py
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/public/: site.webmanifest
client/src/: App.vue  main.ts
client/src/api/core/: axios.service.ts
client/src/api/services/: auth.service.ts  job.service.ts
client/src/assets/: main.css
client/src/components/jobs/: JobTable.vue  JobUploadForm.vue
client/src/components/shared/: AppHeader.vue  FadeTransition.vue  LangSelect.vue
client/src/composables/: useAuth.ts
client/src/i18n/: index.ts
client/src/locales/: en-US.json  pt-BR.json
client/src/router/: index.ts
client/src/stores/: auth.store.ts
client/src/types/: auth.ts  i18n.ts  job.ts  util.ts
client/src/utils/: index.ts
client/src/views/: HomeView.vue  SignIn.vue  SignUp.vue
img-worker/: .gitignore  main.py  pyproject.toml
img-worker/core/: db.py  settings.py  storage.py
img-worker/models/: base.py
img-worker/scripts/: entrypoint.sh
img-worker/tasks/: __init__.py  img.py
infra/: docker-compose.yml
infra/monitoring/grafana/dashboards/: container_and_host.json  fastapi.json  rabbitmq.json
infra/monitoring/prometheus/: prometheus.yml
worker/: .env.example  Dockerfile  pyproject.toml
worker/core/: redis.py  settings.py
worker/models/: __init__.py  base.py
worker/tasks/: img.py
